# QuantumState

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  HOW_IT_WORKS.md  LICENSE  README.md  agents-definition.md  data-model.md  pyproject.toml  quantumstate_implementation_plan.md  setup_agents.py  start.sh  sync-deploy.sh
.streamlit/: config.toml
backend/: creds.py  elastic.py  inject.py  main.py  orchestrator.py  railway.toml  requirements.txt
backend/routers/: chat.py  guardian.py  health.py  incidents.py  pipeline.py  remediate.py  sim.py
blog/: blog-post-working.md
docs/: data-model.md
elastic-setup/: compare_cloud.py  fetch_cloud_diffs.py  seed_runbooks.py  setup.md  setup_agents.py  setup_elser.py
elastic-setup/workflows/: deploy_workflow.py  remediation-workflow.yaml
frontend/: index.html  package-lock.json  vercel.json
frontend/src/: App.tsx  index.css
frontend/src/components/: CredentialsModal.tsx
frontend/src/contexts/: CredentialsContext.tsx
frontend/src/hooks/: useHealth.ts  useIncidents.ts
frontend/src/lib/: api.ts  config.ts
frontend/src/pages/: Console.tsx  SimControl.tsx
infra/: README.md  control.py  docker-compose.yml
infra/mcp-runner/: Dockerfile  mcp_config.json  requirements.txt  runner.py
infra/scraper/: Dockerfile  requirements.txt  scraper.py
infra/services/base/: main.py  requirements.txt
ingest/: inject.py  orchestrator.py  qs_console.py  setup.py  stream.py
web/: start.sh
web/web-backend/: elastic.py  main.py
web/web-frontend/: index.html  vite.config.ts
workflows/: incident-pipeline.yaml
(+32 files in other folders)
